TP1/y.output
Gramática

    0 $accept: program $end

    1 program: programa

    2 programa: programa sentencia
    3         | sentencia

    4 sentencia: seleccion
    5          | asignacion

    6 seleccion: IF P_A condicion P_C L_A programa L_C
    7          | IF P_A condicion P_C L_A programa L_C ELSE L_A programa L_C

    8 condicion: comparacion
    9          | condicion OP_AND comparacion
   10          | condicion OP_OR comparacion

   11 comparacion: expresion comparador expresion

   12 comparador: CMP_MAYOR
   13           | CMP_MENOR
   14           | CMP_MAYOR_IGUAL
   15           | CMP_MENOR_IGUAL
   16           | CMP_IGUAL

   17 expresion: asignacion

   18 asignacion: ID ASIG expresion PUNTO_Y_COMA

   19 expresion: expresion OP_SUMA termino
   20          | expresion OP_RESTA termino
   21          | termino

   22 termino: termino OP_MUL factor
   23        | termino OP_DIV factor
   24        | factor

   25 factor: P_A expresion P_C
   26       | ID
   27       | ENTERO
   28       | FLOAT
   29       | STRING


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ID (258) 18 26
ENTERO (259) 27
FLOAT (260) 28
STRING (261) 29
ASIG (262) 18
OP_SUMA (263) 19
OP_RESTA (264) 20
OP_MUL (265) 22
OP_DIV (266) 23
OP_AND (267) 9
OP_OR (268) 10
CMP_MAYOR (269) 12
CMP_MENOR (270) 13
CMP_MAYOR_IGUAL (271) 14
CMP_MENOR_IGUAL (272) 15
CMP_IGUAL (273) 16
P_A (274) 6 7 25
P_C (275) 6 7 25
L_A (276) 6 7
L_C (277) 6 7
PUNTO_Y_COMA (278) 18
IF (279) 6 7
ELSE (280) 7


No terminales con las reglas donde aparecen

$accept (26)
    en la izquierda: 0
program (27)
    en la izquierda: 1, en la derecha: 0
programa (28)
    en la izquierda: 2 3, en la derecha: 1 2 6 7
sentencia (29)
    en la izquierda: 4 5, en la derecha: 2 3
seleccion (30)
    en la izquierda: 6 7, en la derecha: 4
condicion (31)
    en la izquierda: 8 9 10, en la derecha: 6 7 9 10
comparacion (32)
    en la izquierda: 11, en la derecha: 8 9 10
comparador (33)
    en la izquierda: 12 13 14 15 16, en la derecha: 11
expresion (34)
    en la izquierda: 17 19 20 21, en la derecha: 11 18 19 20 25
asignacion (35)
    en la izquierda: 18, en la derecha: 5 17
termino (36)
    en la izquierda: 22 23 24, en la derecha: 19 20 21 22 23
factor (37)
    en la izquierda: 25 26 27 28 29, en la derecha: 22 23 24


estado 0

    0 $accept: . program $end

    ID  desplazar e ir al estado 1
    IF  desplazar e ir al estado 2

    program     ir al estado 3
    programa    ir al estado 4
    sentencia   ir al estado 5
    seleccion   ir al estado 6
    asignacion  ir al estado 7


estado 1

   18 asignacion: ID . ASIG expresion PUNTO_Y_COMA

    ASIG  desplazar e ir al estado 8


estado 2

    6 seleccion: IF . P_A condicion P_C L_A programa L_C
    7          | IF . P_A condicion P_C L_A programa L_C ELSE L_A programa L_C

    P_A  desplazar e ir al estado 9


estado 3

    0 $accept: program . $end

    $end  desplazar e ir al estado 10


estado 4

    1 program: programa .
    2 programa: programa . sentencia

    ID  desplazar e ir al estado 1
    IF  desplazar e ir al estado 2

    $default  reduce usando la regla 1 (program)

    sentencia   ir al estado 11
    seleccion   ir al estado 6
    asignacion  ir al estado 7


estado 5

    3 programa: sentencia .

    $default  reduce usando la regla 3 (programa)


estado 6

    4 sentencia: seleccion .

    $default  reduce usando la regla 4 (sentencia)


estado 7

    5 sentencia: asignacion .

    $default  reduce usando la regla 5 (sentencia)


estado 8

   18 asignacion: ID ASIG . expresion PUNTO_Y_COMA

    ID      desplazar e ir al estado 12
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    expresion   ir al estado 17
    asignacion  ir al estado 18
    termino     ir al estado 19
    factor      ir al estado 20


estado 9

    6 seleccion: IF P_A . condicion P_C L_A programa L_C
    7          | IF P_A . condicion P_C L_A programa L_C ELSE L_A programa L_C

    ID      desplazar e ir al estado 12
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    condicion    ir al estado 21
    comparacion  ir al estado 22
    expresion    ir al estado 23
    asignacion   ir al estado 18
    termino      ir al estado 19
    factor       ir al estado 20


estado 10

    0 $accept: program $end .

    $default  aceptar


estado 11

    2 programa: programa sentencia .

    $default  reduce usando la regla 2 (programa)


estado 12

   18 asignacion: ID . ASIG expresion PUNTO_Y_COMA
   26 factor: ID .

    ASIG  desplazar e ir al estado 8

    $default  reduce usando la regla 26 (factor)


estado 13

   27 factor: ENTERO .

    $default  reduce usando la regla 27 (factor)


estado 14

   28 factor: FLOAT .

    $default  reduce usando la regla 28 (factor)


estado 15

   29 factor: STRING .

    $default  reduce usando la regla 29 (factor)


estado 16

   25 factor: P_A . expresion P_C

    ID      desplazar e ir al estado 12
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    expresion   ir al estado 24
    asignacion  ir al estado 18
    termino     ir al estado 19
    factor      ir al estado 20


estado 17

   18 asignacion: ID ASIG expresion . PUNTO_Y_COMA
   19 expresion: expresion . OP_SUMA termino
   20          | expresion . OP_RESTA termino

    OP_SUMA       desplazar e ir al estado 25
    OP_RESTA      desplazar e ir al estado 26
    PUNTO_Y_COMA  desplazar e ir al estado 27


estado 18

   17 expresion: asignacion .

    $default  reduce usando la regla 17 (expresion)


estado 19

   21 expresion: termino .
   22 termino: termino . OP_MUL factor
   23        | termino . OP_DIV factor

    OP_MUL  desplazar e ir al estado 28
    OP_DIV  desplazar e ir al estado 29

    $default  reduce usando la regla 21 (expresion)


estado 20

   24 termino: factor .

    $default  reduce usando la regla 24 (termino)


estado 21

    6 seleccion: IF P_A condicion . P_C L_A programa L_C
    7          | IF P_A condicion . P_C L_A programa L_C ELSE L_A programa L_C
    9 condicion: condicion . OP_AND comparacion
   10          | condicion . OP_OR comparacion

    OP_AND  desplazar e ir al estado 30
    OP_OR   desplazar e ir al estado 31
    P_C     desplazar e ir al estado 32


estado 22

    8 condicion: comparacion .

    $default  reduce usando la regla 8 (condicion)


estado 23

   11 comparacion: expresion . comparador expresion
   19 expresion: expresion . OP_SUMA termino
   20          | expresion . OP_RESTA termino

    OP_SUMA          desplazar e ir al estado 25
    OP_RESTA         desplazar e ir al estado 26
    CMP_MAYOR        desplazar e ir al estado 33
    CMP_MENOR        desplazar e ir al estado 34
    CMP_MAYOR_IGUAL  desplazar e ir al estado 35
    CMP_MENOR_IGUAL  desplazar e ir al estado 36
    CMP_IGUAL        desplazar e ir al estado 37

    comparador  ir al estado 38


estado 24

   19 expresion: expresion . OP_SUMA termino
   20          | expresion . OP_RESTA termino
   25 factor: P_A expresion . P_C

    OP_SUMA   desplazar e ir al estado 25
    OP_RESTA  desplazar e ir al estado 26
    P_C       desplazar e ir al estado 39


estado 25

   19 expresion: expresion OP_SUMA . termino

    ID      desplazar e ir al estado 40
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    termino  ir al estado 41
    factor   ir al estado 20


estado 26

   20 expresion: expresion OP_RESTA . termino

    ID      desplazar e ir al estado 40
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    termino  ir al estado 42
    factor   ir al estado 20


estado 27

   18 asignacion: ID ASIG expresion PUNTO_Y_COMA .

    $default  reduce usando la regla 18 (asignacion)


estado 28

   22 termino: termino OP_MUL . factor

    ID      desplazar e ir al estado 40
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    factor  ir al estado 43


estado 29

   23 termino: termino OP_DIV . factor

    ID      desplazar e ir al estado 40
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    factor  ir al estado 44


estado 30

    9 condicion: condicion OP_AND . comparacion

    ID      desplazar e ir al estado 12
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    comparacion  ir al estado 45
    expresion    ir al estado 23
    asignacion   ir al estado 18
    termino      ir al estado 19
    factor       ir al estado 20


estado 31

   10 condicion: condicion OP_OR . comparacion

    ID      desplazar e ir al estado 12
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    comparacion  ir al estado 46
    expresion    ir al estado 23
    asignacion   ir al estado 18
    termino      ir al estado 19
    factor       ir al estado 20


estado 32

    6 seleccion: IF P_A condicion P_C . L_A programa L_C
    7          | IF P_A condicion P_C . L_A programa L_C ELSE L_A programa L_C

    L_A  desplazar e ir al estado 47


estado 33

   12 comparador: CMP_MAYOR .

    $default  reduce usando la regla 12 (comparador)


estado 34

   13 comparador: CMP_MENOR .

    $default  reduce usando la regla 13 (comparador)


estado 35

   14 comparador: CMP_MAYOR_IGUAL .

    $default  reduce usando la regla 14 (comparador)


estado 36

   15 comparador: CMP_MENOR_IGUAL .

    $default  reduce usando la regla 15 (comparador)


estado 37

   16 comparador: CMP_IGUAL .

    $default  reduce usando la regla 16 (comparador)


estado 38

   11 comparacion: expresion comparador . expresion

    ID      desplazar e ir al estado 12
    ENTERO  desplazar e ir al estado 13
    FLOAT   desplazar e ir al estado 14
    STRING  desplazar e ir al estado 15
    P_A     desplazar e ir al estado 16

    expresion   ir al estado 48
    asignacion  ir al estado 18
    termino     ir al estado 19
    factor      ir al estado 20


estado 39

   25 factor: P_A expresion P_C .

    $default  reduce usando la regla 25 (factor)


estado 40

   26 factor: ID .

    $default  reduce usando la regla 26 (factor)


estado 41

   19 expresion: expresion OP_SUMA termino .
   22 termino: termino . OP_MUL factor
   23        | termino . OP_DIV factor

    OP_MUL  desplazar e ir al estado 28
    OP_DIV  desplazar e ir al estado 29

    $default  reduce usando la regla 19 (expresion)


estado 42

   20 expresion: expresion OP_RESTA termino .
   22 termino: termino . OP_MUL factor
   23        | termino . OP_DIV factor

    OP_MUL  desplazar e ir al estado 28
    OP_DIV  desplazar e ir al estado 29

    $default  reduce usando la regla 20 (expresion)


estado 43

   22 termino: termino OP_MUL factor .

    $default  reduce usando la regla 22 (termino)


estado 44

   23 termino: termino OP_DIV factor .

    $default  reduce usando la regla 23 (termino)


estado 45

    9 condicion: condicion OP_AND comparacion .

    $default  reduce usando la regla 9 (condicion)


estado 46

   10 condicion: condicion OP_OR comparacion .

    $default  reduce usando la regla 10 (condicion)


estado 47

    6 seleccion: IF P_A condicion P_C L_A . programa L_C
    7          | IF P_A condicion P_C L_A . programa L_C ELSE L_A programa L_C

    ID  desplazar e ir al estado 1
    IF  desplazar e ir al estado 2

    programa    ir al estado 49
    sentencia   ir al estado 5
    seleccion   ir al estado 6
    asignacion  ir al estado 7


estado 48

   11 comparacion: expresion comparador expresion .
   19 expresion: expresion . OP_SUMA termino
   20          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 25
    OP_RESTA  desplazar e ir al estado 26

    $default  reduce usando la regla 11 (comparacion)


estado 49

    2 programa: programa . sentencia
    6 seleccion: IF P_A condicion P_C L_A programa . L_C
    7          | IF P_A condicion P_C L_A programa . L_C ELSE L_A programa L_C

    ID   desplazar e ir al estado 1
    L_C  desplazar e ir al estado 50
    IF   desplazar e ir al estado 2

    sentencia   ir al estado 11
    seleccion   ir al estado 6
    asignacion  ir al estado 7


estado 50

    6 seleccion: IF P_A condicion P_C L_A programa L_C .
    7          | IF P_A condicion P_C L_A programa L_C . ELSE L_A programa L_C

    ELSE  desplazar e ir al estado 51

    $default  reduce usando la regla 6 (seleccion)


estado 51

    7 seleccion: IF P_A condicion P_C L_A programa L_C ELSE . L_A programa L_C

    L_A  desplazar e ir al estado 52


estado 52

    7 seleccion: IF P_A condicion P_C L_A programa L_C ELSE L_A . programa L_C

    ID  desplazar e ir al estado 1
    IF  desplazar e ir al estado 2

    programa    ir al estado 53
    sentencia   ir al estado 5
    seleccion   ir al estado 6
    asignacion  ir al estado 7


estado 53

    2 programa: programa . sentencia
    7 seleccion: IF P_A condicion P_C L_A programa L_C ELSE L_A programa . L_C

    ID   desplazar e ir al estado 1
    L_C  desplazar e ir al estado 54
    IF   desplazar e ir al estado 2

    sentencia   ir al estado 11
    seleccion   ir al estado 6
    asignacion  ir al estado 7


estado 54

    7 seleccion: IF P_A condicion P_C L_A programa L_C ELSE L_A programa L_C .

    $default  reduce usando la regla 7 (seleccion)
